I changed the background color and increased the size

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <title>Sample code</title>
 </head>
 <body>
+	<h1 style="font-size:60px;">Heading 1</h1>
+
 
 <h1>Imran</h1>
 <p>INSERT TEXT</p>
+
+<h1 style="color: blue;">I am still learning HTML</h1>
+<body style="background-color:powderblue;">
 
 </body>
 </html>
